--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     color: #222;
-    background-color: #f7f7f7;
+    background-color: #f5f5f5;
     font-family: -apple-system, "Segoe UI", Helvetica, sans-serif;
     padding: 1em;
     margin: 0;
@@ -88,7 +88,7 @@ h1 {
    ========================================================================= */
 
 .product-link {
-    background-color: #fff;
+    background-color: #fafafa;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, .16);
     font-size: 1.1em;
     max-width: 540px;
@@ -103,12 +103,18 @@ h1 {
     align-items: center;
     align-items: flex-start;
     transform: scale(.99);
-    transition: box-shadow .1s, transform .1s;
+    transition: box-shadow .1s, background-color .1s;
 }
 
-.product-link:hover {
-    transform: scale(1);
+.is-desktop .product-link:hover {
     box-shadow: 1px 4px 16px rgba(0, 0, 0, .2);
+    background-color: #fff;
+}
+
+.is-mobile .product-link:active,
+.is-desktop .product-link:active {
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .16);
+    background-color: #f5f5f5;
 }
 
 .is-mobile .product-link {
