--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 /* =========================================================================
+   Font Families
+   ========================================================================= */
+:root {
+    --default-font-family: -apple-system, "Segoe UI", Helvetica, sans-serif;
+    --special-font-family: 'Raleway', 'Segoe UI', sans-serif;
+}
+
+
+
+/* =========================================================================
    Body
    ========================================================================= */
 
 body {
-    color: #222;
+    color: #333;
     background-color: #f5f5f5;
-    font-family: -apple-system, "Segoe UI", Helvetica, sans-serif;
+    font-family: var(--default-font-family);
     padding: 1em;
     margin: 0;
     font-size: 18px;
@@ -50,7 +60,7 @@ header {
    ========================================================================= */
 
 h1 {
-    font-family: 'Raleway', 'Segoe UI', sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-family: var(--special-font-family);
     font-weight: 800;
     font-size: 3.5em;
     margin: 0 0 .3em;
@@ -78,7 +88,7 @@ h1 {
 }
 
 .is-mobile .preamble {
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 
@@ -118,11 +128,11 @@ h1 {
 }
 
 .is-mobile .product-link {
-    font-size: 1em;
+    font-size: .9em;
     line-height: 1.3;
     padding: .8em;
     gap: .8em;
-    border-radius: .8em;
+    border-radius: .5em;
 }
 
 
@@ -149,6 +159,6 @@ h1 {
    Product Name
    ========================================================================= */
 
-.prduct-link strong {
-    font-family: 'Raleway', 'Segoe UI', sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+.product-link strong {
+    font-family: var(--special-font-family);
 }
